# Grounded-Segment-Anything

./: README.md  app_cli.py  kosmos_utils.py  pyproject.toml  requirements.txt  setup.py
checkpoints/: ram_epoch12.pth
grounded-segment-anything/: util_tencent.py
grounded_segment_anything/: README.md  __init__.py  app.py  app_cli.py
transformers_4_35_0/: dependency_versions_check.py
